
  - Have the Java parser recognize generics (surrounded by angle brackets)
    so they don't interfere with identifying anonymous inner classes.

  - Avoid an infinite loop when trying to use saved copies of the
    env.Install() or env.InstallAs() after replacing the method
    attributes.

  - Improve the performance of setting construction variables.

  From Rob Managan:

  - Enhance TeX and LaTeX support to work with BuildDir(duplicate=0).

  - Re-run LaTeX when it issues a package warning that it must be re-run.

  From Jan Nijtmans:

  - If $JARCHDIR isn't set explicitly, use the .java_classdir attribute
    that was set when the Java() Builder built the .class files.

  From Gary Oberbrunner:

  - Fix the ability to build an Alias in --interactive mode.

  - Fix the ability to hash the contents of actions for nested Python
    functions on Python versions where the inability to pickle them
    returns a TypeError (instead of the documented PicklingError).

  From Jonas Olsson:

  - Fix use of the Intel C compiler when the top compiler directory,
    but not the compiler version, is specified.

  - Handle Intel C compiler network license files (port@system).

  From Adam Simpkins:

  - Add a --interactive option that starts a session for building (or
    cleaning) targets without re-reading the SConscript files every time.

  - Fix use of readline command-line editing in --interactive mode.

  - Have the --interactive mode "build" command with no arguments
    build the specified Default() targets.

  - Fix the Chmod(), Delete(), Mkdir() and Touch() Action factories to
    take a list (of Nodes or strings) as arguments.

  From Vaclav Smilauer:

  - Fix saving and restoring an Options value of 'all' on Python
    versions where all() is a builtin function.

  From Daniel Svensson:

  - Code correction in SCons.Util.is_List().

  From Ben Webb:

  - Support the SWIG %module statement with following modifiers in
    parenthese (e.g., '%module(directors="1")').